<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:enabled="true"
        android:iconTint="@color/black"
        android:visible="true"
        android:title="@string/home"/>
    <item
        android:id="@+id/graph"
        android:icon="@drawable/baseline_auto_graph_24"
        android:enabled="true"
        android:iconTint="@color/black"
        android:visible="true"
        android:title="@string/view_graph_results"/>
    <item
        android:id="@+id/account"
        android:icon="@drawable/baseline_account_box_24"
        android:enabled="true"
        android:iconTint="@color/black"
        android:visible="true"
        android:title="@string/account"/>
</menu>